--- a/static/juego.html
+++ b/static/juego.html
@@ -86,6 +86,7 @@
       <div class="button-group">
         <button id="btnAlimentar" class="action-btn" title="Alimenta a la reina para mantenerla saludable">Alimentar reina (-3 hojas)</button>
         <button id="btnAtaque" class="danger-btn" title="Simula un ataque enemigo">¡Ataque enemigo!</button>
+        <button id="btnTowerDefense" class="special-btn" title="Juega al minijuego para ganar recursos" onclick="window.location.href='/defense.html'">Tower Defense 🎮</button>
       </div>
     </aside>
   </div>
